# pyoai

./: .envrc  .gitignore  flake.nix  pyproject.toml
.github/workflows/: ci.yml
src/oaipmh/: client.py  common.py  metadata.py  server.py
src/oaipmh/tests/: createbrokendata.py  createdata.py  createdata_deleted_records.py  fakeclient.py  test_broken.py  test_client.py  test_datestamp.py  test_deleted_records.py  test_server.py  test_validation.py
