[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oaipmh"
version = "2.6.0"
description = "Python implementation of the Open Archives Initiative Protocol for Metadata Harvesting (OAI-PMH)"
requires-python = ">=3.10"
license = "BSD-3-Clause"
authors = [
    { name = "Infrae", email = "info@infrae.com" },
]
maintainers = [
    { name = "Jaime Cardozo", email = "jaime.cardozo@library.ethz.ch" },
]
dependencies = ["lxml", "six"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: BSD License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Environment :: Web Environment",
]
keywords = ["OAI-PMH", "xml", "archive", "metadata", "harvesting"]

[project.urls]
Repository = "https://github.com/eth-library/oaipmh"
Original-Repository = "https://github.com/infrae/pyoai"
Changelog = "https://github.com/eth-library/oaipmh/blob/master/CHANGELOG.md"
Issues = "https://github.com/eth-library/oaipmh/issues"

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["src/oaipmh/tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/oaipmh"]